# array

./: CMakeLists.txt
include/: -2_array.h
include/-2/: array.h  array_nd.h  array_nd_internal.h  array_types.h
src/: array.c  array_nd.c
